# Battery-Lifecycle-Modeling-based-on-SEM-ageing-model-

./: .gitignore  Dockerfile  README.md  final.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
sem/: pyvenv.cfg
sem/Scripts/: activate  activate.bat
source/: SEM v2.py
src/sem/: engine.py  models.py  plots.py  postprocess.py  run.py
src/sem.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_engine.py
